# declinator

./: .gitignore  .travis.yml  Makefile  README.md  declinator.c  declinator.h  declinator.js  declinator.py  declinator.spec  duplidict.c  duplidict.h  duplidict.py  main.c  test.py
c/: Makefile  Makefile.am  configure.ac
c/include/: declinator.h
c/src/: Makefile.am
javascript/: declinator-example.html  declinator.js
python/: Makefile  setup.py
python/declinator/: __init__.py  declinator.py  duplidict.py
rules/: _listdir.json  pl_PL.json
rules/en_US/: _listdir.json  detection.pcre  first.json  illustration.json
rules/pl_PL/: _listdir.json  adjective.json  detection.pcre  first.json  illustration.json  inter.json  last.json  noun.json  noun_eshift.json  preposition.json  pronoun.json  short.json  suffix.json  title.json
